# ClipboardSyncClient

./: README.md  pyproject.toml
ClipboardClient/: main.py
