[tool.poetry]
name = "clipboardsyncclient"
version = "0.1.0"
description = ""
authors = ["Serhii-Nikulin <sergey.nikulin99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
clipboard = "^0.0.4"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
